# NovelRulesTranslator

./: CMakeLists.txt  README.md  main.cpp  run.cpp  run.h
core/: AnalyzerGenerator.cpp  AnalyzerGenerator.hpp  FileInteractor.cpp  InfoParser.cpp  InfoParser.hpp  TableGenerator.cpp  TableGenerator.hpp
core/fi_info/: fi_funcs.cpp  fi_funcs.hpp  fi_type.h
except/: InnerTranslateException.h  ParseTranslateException.h  TranslateException.h
include/: FileInteractor.h  GlobalInfo.h  core.h  objects.h  periphery.h
utils/: Logger.h  PoolManager.cpp  PoolManager.hpp  funcs.cpp  funcs.hpp  semaphore.hpp  template_funcs.h
